--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
+  flutter_config: ^2.0.2
   google_maps_flutter: ^2.3.1
   shared_preferences: ^2.2.0
 
